--- a/reveal.js-master/demo.html
+++ b/reveal.js-master/demo.html
@@ -53,7 +53,11 @@
 					<section>
 						<h2>Basement Level 1</h2>
 						<p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
+						<p>Adityapramudita 181112132</p>
+						<p>Ujian UAS sem 7 menyenangkan</p>
+
 					</section>
+	
 					<section>
 						<h2>Basement Level 2</h2>
 						<p>That's it, time to go back up.</p>
